[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Fonts/StayPixelRegular-EaOxl.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="PausePopup" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="."]
visible = true
margin_left = 320.655
margin_top = 350.816
margin_right = 360.655
margin_bottom = 390.816
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
margin_right = 286.0
margin_bottom = 152.0
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="Popup/VBoxContainer"]
margin_right = 286.0
margin_bottom = 46.0
text = "Continue"

[node name="OtionsButton" type="Button" parent="Popup/VBoxContainer"]
margin_top = 50.0
margin_right = 286.0
margin_bottom = 96.0
text = "Options"

[node name="MenuButton" type="Button" parent="Popup/VBoxContainer"]
margin_top = 100.0
margin_right = 286.0
margin_bottom = 146.0
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Popup/VBoxContainer"]
margin_top = 150.0
margin_right = 286.0
margin_bottom = 196.0
text = "Quit"

[connection signal="pressed" from="Popup/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Popup/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
